--- a/index.html
+++ b/index.html
@@ -34,7 +34,50 @@
       <!-- Stay -->
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
-        <!-- Create a form here -->
+        <form>
+          <fieldset>
+            <div>
+              <label for="location"> Location:</label>
+              <input
+              id="location"
+              type="text"
+              name="location"
+              placeholder="Search destination"
+              />
+            </div>
+            <div>
+              <label for="arrive"> Arrive:</label>
+              <input
+              id="arrive"
+              type="date"
+              name="arrive"
+              />
+            </div>
+            <div>
+              <label for="depart"> Depart:</label>
+              <input
+              id="depart"
+              type="date"
+              name="depart"
+              />
+            </div>
+            <div>
+              <label for="type"> Type:</label>
+              <select name="type" id="type">
+                <option value="apartment">Apartment</option>
+                <option value="barn">Barn</option>
+                <option value="castle">Castle</option>
+                <option value="houseboat">Houseboat</option>
+                <option value="tinyhouse">Tiny House</option>
+                <option value="yacht">Yacht</option>
+                <option value="yurt">Yurt</option>
+              </select>
+            </div>
+            <div>
+              <button type="search">Search</button>
+            </div> 
+          </fieldset>
+        </form>
       </section>
 
       <!-- About -->
