--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       <section id="about" class="alternate-background">
         <h2>About</h2>
 
-        <img
+        <div>
+          <img
           src="images/vacation-rental-pool.png"
           alt="Thinkfulbnb - Vacation rental pool"
         />
@@ -101,30 +102,41 @@
           neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
           gravida neque.
         </p>
+        </div>
       </section>
 
       <!-- Ideas -->
       <section id="ideas">
         <h2>Ideas</h2>
-        <h3>Forest retreats</h3>
+        <div class ="row">
+        <div>
+          <h3>Forest retreats</h3>
         <img
           src="images/forest-retreat.png"
           alt="Thinkfulbnb - Forest retreat"
         />
-        <h3>Beaches</h3>
+      </div>
+        <div>
+         <h3>Beaches</h3>
         <img src="images/beach-house.png" alt="Thinkfulbnb - Beach house" />
-
-        <h3>Rustic cabins</h3>
+      </div>
+       <div>
+         <h3>Rustic cabins</h3>
         <img src="images/cabin.png" alt="Thinkfulbnb - Cabin" />
-
-        <h3>Pet-friendly</h3>
+      </div>
+        <div>
+          <h3>Pet-friendly</h3>
         <img src="images/pet-friendly.png" alt="Thinkfulbnb - Pet-friendly" />
+      </div>
+      </div>
       </section>
 
       <!-- Host -->
       <section id="host" class="alternate-background">
         <h2>Want to Become a Thinkfulbnb Host?</h2>
-        <p>
+        <div>
+        <div>
+          <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
           molestie in est id efficitur. Sed hendrerit ut turpis quis dapibus.
           Nam sit amet iaculis lectus. Aliquam erat volutpat. Praesent rhoncus
@@ -141,8 +153,10 @@
             hendrerit mauris.
           </li>
         </ul>
+        </div>
 
         <img src="images/become-a-host.png" alt="Thinkfulbnb - Become a host" />
+      </div>
       </section>
     </main>
 
